syntax = "proto3";

option go_package = "proto/pb";

message BookId {
  string id = 1;
}

message Book {
  string id = 1;
  string name = 2;
  string description = 3;
  float medium_price = 4;
  string author = 5;
  string img_url = 6;
}

message BookResponse {
  int32 status = 1;
}

service BookService {
  rpc CreateBook (Book) returns (BookResponse);
  rpc Find (BookId) returns (Book);
}